fork for PeeperSocial.github.io -> PeepzHQ.github.io

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 <head>
-<meta http-equiv="refresh" content="2;url=http://peeper.com.br" />
+<meta http-equiv="refresh" content="2;url=https://peepzhq.github.io" />
 <title>Page Moved</title>
 </head>
 <body>
-This page has moved. Click <a href="http://peeper.com.br">here</a> to go to the new page.
+This page has moved. Click <a href="http://https://peepzhq.github.io">here</a> to go to the new page.
 </body>
 </html>
